    gtk 2.18 compatibility #146
    remove explicit libgdk-pixbuf2.0-0 dependency #146
    added precision timer for more accurate/smooth copy speeds
    btrfs moint point detection workaround #165
    fix segfault on blank Preferences Terminal setting #166
    add rxvt to terminal programs list #166
    desktop drop onto folder #45
    fix new tab path merged if the last dir spec is / #167
0.8.0   2012-09-14:
    fix horiz scroll on single-click mode auto-select #137
    deprecated keys in spacefm desktop files #136
    fix path bar font not set on new browser
    default keys for Go|Tab|Tab N = Alt+1 thru Alt+0
    license bumped to GPL3+
    added SpaceFM Dialog
    Task Show Output raises only once
    custom default command script
    fix crash on no src paths #143
    fix readlink buffer size
0.7.11  2012-08-15:
    added --no-saved-tabs, -n command line option to not load saved tabs #110
    --reuse-tab can be used in conjunction with other options
    File|Root Window opens current folder #116
    specifying --panel=N without a dir shows and focuses panel N
    handle network URLs on command line
    user manual Invocation updated
    added dependency libgtk2.0-bin [spacefm 0.7.10 with --disable-pixmaps]
    find-as-you-type search options #85
    rename dialog name selection UTF-8 compliant #127
    replace G_VALUE_INIT macro #126
    added file list Edit|Select By Pattern
    adjust parse url
    Show Output option should open on additional output after closure
    Remove Text Type Association popup note
    display file sizes and times in overwrite query
    file change detection blacklist non-block nfs fuse cifs smbfs ftpfs #129
    percent in path bar select by pattern
    fix hang on click on 5000+ selected files in list view
    clean udevil mount points on device removal, exit
    fix auto umount on eject
    fix icon view drag target #132
    added custom Protocol Handler setting to Path Bar context menu