@@ -12,18 +12,21 @@
 
 #include "vfs-execute.h"
 
+#ifdef HAVE_SN
 /* FIXME: Startup notification may cause problems */
 #define SN_API_NOT_YET_FROZEN
 #include <libsn/sn-launcher.h>
-
+#include <X11/Xatom.h>
 #include <gtk/gtk.h>
 #include <gdk/gdkx.h>
-#include <X11/Xatom.h>
+#include <time.h>
+#else
+#include <gdk/gdk.h>
+#endif
 
 #include <string.h>
 #include <stdlib.h>
 
-#include <time.h>
 
 
 gboolean vfs_exec( const char* work_dir,
@@ -36,6 +39,7 @@ gboolean vfs_exec( const char* work_dir,
                                argv, envp, disp_name, flags, err );
 }
 
+#ifdef HAVE_SN
 static gboolean sn_timeout( gpointer user_data )
 {
     SnLauncherContext * ctx = ( SnLauncherContext* ) user_data;
@@ -98,6 +102,7 @@ tvsn_get_active_workspace_number ( GdkScreen *screen )
 
     return ws_num;
 }
+#endif
 
 gboolean vfs_exec_on_screen( GdkScreen* screen,
                              const char* work_dir,
@@ -106,8 +111,10 @@ gboolean vfs_exec_on_screen( GdkScreen* screen,
                              GSpawnFlags flags,
                              GError **err )
 {
+#ifdef HAVE_SN
     SnLauncherContext * ctx = NULL;
     SnDisplay* display;
+#endif
     gboolean ret;
     GSpawnChildSetupFunc setup_func = NULL;
     extern char **environ;
@@ -135,6 +142,7 @@ gboolean vfs_exec_on_screen( GdkScreen* screen,
         }
     }
 
+#ifdef HAVE_SN
     display = sn_display_new ( GDK_SCREEN_XDISPLAY ( screen ),
                                ( SnDisplayErrorTrapPush ) gdk_error_trap_push,
                                ( SnDisplayErrorTrapPush ) gdk_error_trap_pop );
@@ -167,6 +175,7 @@ gboolean vfs_exec_on_screen( GdkScreen* screen,
         new_env[ startup_id_index ] = g_strconcat( "DESKTOP_STARTUP_ID=",
                                       sn_launcher_context_get_startup_id ( ctx ), NULL );
     }
+#endif
 
     /* This is taken from gdk_spawn_on_screen */
     display_name = gdk_screen_make_display_name ( screen );
@@ -201,6 +210,7 @@ gboolean vfs_exec_on_screen( GdkScreen* screen,
 
     g_strfreev( new_env );
 
+#ifdef HAVE_SN
     if ( G_LIKELY ( ctx ) )
     {
         if ( G_LIKELY ( ret ) )
@@ -214,6 +224,7 @@ gboolean vfs_exec_on_screen( GdkScreen* screen,
 
     if ( G_LIKELY ( display ) )
         sn_display_unref ( display );
+#endif
 
     return ret;
 }
