@@ -18,6 +18,7 @@
     add rxvt to terminal programs list #166
     desktop drop onto folder #45
     fix new tab path merged if the last dir spec is / #167
+    libstartup-notification-0.9 or -1.0 optional #19
 0.8.0   2012-09-14:
     fix horiz scroll on single-click mode auto-select #137
     deprecated keys in spacefm desktop files #136
